2007-04-06  8:40 Mike Park  <mike.park@nasa.gov>

	* Made 1.3.0 Release. GTech release. Account for fun3d-23948 c2n
	index flip. Incudes FAUXGeom.  Fixes edge parameter parallel
	consistency.

2007-03-30 10:00 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridsetlocalnodedata_) repaired a bug that
	prevented ghost node edge t values from being updated.

2007-03-30  8:40 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridApplyQueue) set node xyz, map, and aux even
	for node that already exist to be compatable with existing node
	movement in future.

2007-03-29 14:17 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridCollapseEdge) to correctly evaluate nodes
	collapsed to lower dimensional gemoetry entities.

2007-03-29 11:52 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridApplyQueue) set face uv and edge t
	consistently with neighboring elements after a parallel operation.

2007-03-29 11:52 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeRatio,gridCollapseEdge) to
	consistantly evaluate uv and xyz for both faces.

2007-03-22 13:10 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridcreate_) to account for fun3d-23948 c2n
	index flip.

2007-02-20  16:52 Mike Park  <mike.park@nasa.gov>
	
	* src/FAUXGeom.c (CADGeom_PointOnFace) to prevent unitialized
	memory read and seg fault, get rid of unused variable i.

2007-02-20  16:15 Mike Park  <mike.park@nasa.gov>
	
	* src/FAUXGeom.c (initialize_faux) improved error handling.
	* src/FAUXGeom.c (faux_faceId) corrected error that prevented
	finding face.

2007-02-20  16:15 Mike Park  <mike.park@nasa.gov>
	
	* src/FAUXGeom.c (initialize_faux) improved error handling.

2007-02-20 15:08 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.14 Release. Tag before FAKEGeom reimplementation.

2007-02-12 10:05 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelswap_) skip gridRemoveTwoFaceCell for
	cut cell and frozen boundary layer cases, to see if it causes parallel