@@ -1,3 +1,11 @@
+2007-04-11 14:45 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridcad.c (gridNodeProjectionDisplacement) skip node projection
+	displacement calculation if node is frozen.
+	* src/gridmove.c (gridmoveProjectionDisplacements) set frozen
+	node displacements to zero and skip gridNodeProjectionDisplacement
+	call.
+
 2007-04-06  8:40 Mike Park  <mike.park@nasa.gov>
 
 	* Made 1.3.0 Release. GTech release. Account for fun3d-23948 c2n
